--- a/Web_development_1/guided-project-1/index.html
+++ b/Web_development_1/guided-project-1/index.html
@@ -15,6 +15,8 @@
     <p>We are selling cakes, bakery items and lunch. Enjoy the 
         best Brownies and Drinks at 
         <span>The Tasty Cakes.</span> Browse our collection and order your favorite now.</p>
+    <img class="image-cake" src="./images/image-01.png" alt="image of a cake">
+    
     <script src="index.js"></script>
 </body>
 </html>
