Add footer section

--- a/Web_development_1/guided-project-1/index.html
+++ b/Web_development_1/guided-project-1/index.html
@@ -42,7 +42,10 @@
         </tr>
 
     </table>
-    
+
+    <footer>
+        <p>&copy;2022. Tasty Cakes Sri Lanka</p>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
