--- a/Web_development_1/guided-project-1/index.html
+++ b/Web_development_1/guided-project-1/index.html
@@ -12,10 +12,12 @@
     <h1>Tasty Cakes Sri Lanka</h1>
     <h2 class="tagline"><i>same day 
         delivery - order before 4pm</i></h2>
-    <p>We are selling cakes, bakery items and lunch. Enjoy the 
-        best Brownies and Drinks at 
-        <span>The Tasty Cakes.</span> Browse our collection and order your favorite now.</p>
     <img class="image-cake" src="./images/image-01.png" alt="image of a cake">
+
+    <p>We are selling cakes, bakery items and lunch. Enjoy the 
+        best Brownies and Drinks at <span>The Tasty Cakes.</span> 
+        Browse our collection and order your favorite now.
+    </p>    
     
     <p class="price-topic">Price List</p>
     
